src/components/SocialButtons.scss
.social-container {
    display: flex;
    flex-wrap: wrap;
    @media screen and (min-width: $breakpoint-lg) {
        gap: 16px;
    }

    .social-btn {
        font-size: 18px;
        padding: 10px 20px;
    }
    .seperator {
        // border: 1px solid #373d47;
        width: 1px;
        height: 100%;
        background-color: #373d47;
    }
}

